production/metacubexd/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metacubexd
  labels:
    app.kubernetes.io/name: metacubexd
spec:
  selector:
    app.kubernetes.io/name: metacubexd
  ports:
    - name: http
      port: 80
      targetPort: http
