production/metacubexd/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metacubexd
  labels:
    app.kubernetes.io/name: metacubexd
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - metacubexd.clusters.zjusct.io
    - metacubexd.s.zjusct.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: metacubexd
          port: 80
